--- a/RPG2-OOP/Info.plist
+++ b/RPG2-OOP/Info.plist
@@ -32,9 +32,12 @@
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
-		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Minecraft.ttf</string>
 	</array>
 </dict>
 </plist>
